--- a/PyTorchDL.ipynb
+++ b/PyTorchDL.ipynb
@@ -1615,18 +1615,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.8823, 0.9150, 0.3829, 0.9593],\n",
+      "        [0.3904, 0.6009, 0.2566, 0.7936],\n",
+      "        [0.9408, 0.1332, 0.9346, 0.5936]])\n",
+      "tensor([[0.8823, 0.9150, 0.3829, 0.9593],\n",
+      "        [0.3904, 0.6009, 0.2566, 0.7936],\n",
+      "        [0.9408, 0.1332, 0.9346, 0.5936]])\n",
+      "tensor([[True, True, True, True],\n",
+      "        [True, True, True, True],\n",
+      "        [True, True, True, True]])\n"
+     ]
+    }
+   ],
    "source": [
-    "# Creating reproducible tensors"
+    "# Creating reproducible tensors\n",
+    "import torch\n",
+    "\n",
+    "RANDOM_SEED = 42\n",
+    "# set the random seed\n",
+    "torch.manual_seed(RANDOM_SEED)\n",
+    "random_tensor_C = torch.rand(3, 4)\n",
+    "\n",
+    "torch.manual_seed(RANDOM_SEED)\n",
+    "random_tensor_D = torch.rand(3, 4)\n",
+    "\n",
+    "print(random_tensor_C)\n",
+    "print(random_tensor_D)\n",
+    "print(random_tensor_C == random_tensor_D)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "### Running tensors and PyTorch objects on GPUs \n",
+    "\n",
+    "1. Google colab / colab pro\n",
+    "2. Use your own - Take some setup and investment $$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
