--- a/PyTorchDL.ipynb
+++ b/PyTorchDL.ipynb
@@ -1669,6 +1669,140 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'cpu'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check for GPU access with PyTorch\n",
+    "import torch\n",
+    "torch.cuda.is_available()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'cpu'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Setup device agnostic code:\n",
+    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    "device"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of GPUs: 0\n",
+      "Number of CPUs: 8\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Number of GPUs:\", torch.cuda.device_count())\n",
+    "\n",
+    "for i in range(torch.cuda.device_count()):\n",
+    "    print(\"Device \", i, \":\", torch.cuda.get_device_name(i))\n",
+    "\n",
+    "print(\"Number of CPUs:\", torch.get_num_threads())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([1, 2, 3]) cpu\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "# Putting tensors on GPUs\n",
+    "tensor = torch.tensor([1,2,3], device=\"cpu\")\n",
+    "\n",
+    "print(tensor, tensor.device)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([1, 2, 3]), device(type='cpu'))"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Move tensor to GPU (if available)\n",
+    "tensor_on_device = tensor.to(device)\n",
+    "tensor_on_device, tensor_on_device.device"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# If a tensor is on a GPU you can't transform it to NumPy without transfering it to the CPU first. \n",
+    "tensor_on_gpu = tensor.to(device)\n",
+    "tensor_back_on_cpu = tensor_on_gpu.cpu().numpy()\n",
+    "tensor_back_on_cpu\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
