--- a/PyTorchDL.ipynb
+++ b/PyTorchDL.ipynb
@@ -304,32 +304,32 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[[0.2649, 0.2511, 0.4055, 0.0312, 0.4466, 0.2385, 0.5989, 0.8214,\n",
-       "          0.7188, 0.8562],\n",
-       "         [0.1954, 0.3834, 0.6799, 0.2386, 0.9095, 0.2072, 0.8122, 0.7827,\n",
-       "          0.8390, 0.6918],\n",
-       "         [0.9718, 0.6003, 0.3966, 0.8923, 0.7404, 0.4784, 0.1263, 0.7726,\n",
-       "          0.8752, 0.5624],\n",
-       "         [0.6132, 0.0195, 0.8704, 0.6190, 0.4723, 0.9993, 0.4247, 0.3630,\n",
-       "          0.9506, 0.0116]],\n",
+       "tensor([[[0.5832, 0.7698, 0.6906, 0.0504, 0.9005, 0.1609, 0.2261, 0.5056,\n",
+       "          0.9495, 0.9461],\n",
+       "         [0.2672, 0.7762, 0.6474, 0.5488, 0.1574, 0.2398, 0.0074, 0.9096,\n",
+       "          0.0103, 0.5879],\n",
+       "         [0.0123, 0.6528, 0.7615, 0.1956, 0.3988, 0.6294, 0.1904, 0.0867,\n",
+       "          0.8438, 0.9888],\n",
+       "         [0.1008, 0.7665, 0.7167, 0.3119, 0.4173, 0.3568, 0.2031, 0.4134,\n",
+       "          0.0621, 0.6815]],\n",
        "\n",
-       "        [[0.8703, 0.9172, 0.6445, 0.2106, 0.0202, 0.6376, 0.4247, 0.3763,\n",
-       "          0.1687, 0.0090],\n",
-       "         [0.1238, 0.1669, 0.4100, 0.1283, 0.5984, 0.6629, 0.9817, 0.4589,\n",
-       "          0.9991, 0.9547],\n",
-       "         [0.7115, 0.5582, 0.9955, 0.7505, 0.7203, 0.9552, 0.2657, 0.7679,\n",
-       "          0.9289, 0.8360],\n",
-       "         [0.3418, 0.9300, 0.5460, 0.6784, 0.9774, 0.0803, 0.6280, 0.0039,\n",
-       "          0.3698, 0.5645]],\n",
+       "        [[0.8603, 0.6899, 0.7058, 0.7083, 0.0295, 0.0100, 0.6576, 0.9216,\n",
+       "          0.7362, 0.6796],\n",
+       "         [0.8156, 0.3065, 0.4881, 0.8441, 0.9941, 0.2854, 0.2215, 0.7303,\n",
+       "          0.3027, 0.7183],\n",
+       "         [0.9543, 0.1761, 0.3778, 0.6276, 0.7738, 0.3574, 0.7811, 0.5845,\n",
+       "          0.3769, 0.6893],\n",
+       "         [0.1408, 0.6898, 0.4293, 0.1258, 0.0657, 0.9473, 0.6397, 0.1913,\n",
+       "          0.1075, 0.7738]],\n",
        "\n",
-       "        [[0.7953, 0.6486, 0.7976, 0.5407, 0.8237, 0.6578, 0.2220, 0.1017,\n",
-       "          0.7854, 0.4870],\n",
-       "         [0.3548, 0.8458, 0.7294, 0.8470, 0.0806, 0.9194, 0.5743, 0.2556,\n",
-       "          0.1238, 0.5043],\n",
-       "         [0.3223, 0.8339, 0.1504, 0.0251, 0.4516, 0.8296, 0.9561, 0.7901,\n",
-       "          0.4593, 0.1621],\n",
-       "         [0.7747, 0.9599, 0.5546, 0.8083, 0.6918, 0.4085, 0.0443, 0.3448,\n",
-       "          0.6567, 0.8893]]])"
+       "        [[0.8070, 0.1483, 0.7755, 0.7721, 0.6200, 0.3932, 0.5656, 0.7190,\n",
+       "          0.0658, 0.5869],\n",
+       "         [0.3147, 0.4289, 0.6724, 0.6164, 0.0783, 0.3366, 0.0405, 0.9668,\n",
+       "          0.4229, 0.0811],\n",
+       "         [0.0666, 0.0304, 0.9510, 0.1068, 0.2929, 0.6605, 0.1094, 0.3446,\n",
+       "          0.8513, 0.1550],\n",
+       "         [0.2232, 0.9805, 0.4767, 0.8182, 0.2751, 0.4964, 0.5799, 0.8770,\n",
+       "          0.3891, 0.2415]]])"
       ]
      },
      "execution_count": 14,
@@ -749,8 +749,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 477 µs, sys: 799 µs, total: 1.28 ms\n",
-      "Wall time: 1.18 ms\n"
+      "CPU times: user 428 µs, sys: 826 µs, total: 1.25 ms\n",
+      "Wall time: 1.04 ms\n"
      ]
     },
     {
@@ -783,8 +783,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 68 µs, sys: 18 µs, total: 86 µs\n",
-      "Wall time: 79.9 µs\n"
+      "CPU times: user 60 µs, sys: 11 µs, total: 71 µs\n",
+      "Wall time: 60.8 µs\n"
      ]
     },
     {
@@ -1403,7 +1403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -1412,7 +1412,7 @@
        "tensor([5])"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1424,7 +1424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -1433,7 +1433,7 @@
        "tensor([1, 2, 3])"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1445,7 +1445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -1456,7 +1456,7 @@
        "         [7, 8, 9]]])"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1468,7 +1468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -1477,7 +1477,7 @@
        "tensor([9])"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1488,7 +1488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -1498,7 +1498,7 @@
        " tensor([1., 2., 3., 4., 5., 6., 7.], dtype=torch.float64))"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1515,7 +1515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -1525,7 +1525,7 @@
        " tensor([1., 2., 3., 4., 5., 6., 7.], dtype=torch.float64))"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1537,7 +1537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -1547,7 +1547,7 @@
        " array([1., 1., 1., 1., 1., 1., 1.], dtype=float32))"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1561,7 +1561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -1570,7 +1570,7 @@
        "dtype('float32')"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1581,19 +1581,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[0.5747, 0.6955, 0.0241, 0.5580],\n",
-      "        [0.6831, 0.0989, 0.5308, 0.5763],\n",
-      "        [0.3914, 0.3348, 0.5415, 0.4988]])\n",
-      "tensor([[0.4791, 0.1589, 0.9381, 0.7001],\n",
-      "        [0.2262, 0.0448, 0.2709, 0.5182],\n",
-      "        [0.5933, 0.0187, 0.2965, 0.0665]])\n",
+      "tensor([[0.8995, 0.8272, 0.6298, 0.6027],\n",
+      "        [0.0762, 0.5323, 0.3883, 0.6806],\n",
+      "        [0.2543, 0.3961, 0.4747, 0.4402]])\n",
+      "tensor([[0.6115, 0.7870, 0.1249, 0.5040],\n",
+      "        [0.0896, 0.2605, 0.2826, 0.2796],\n",
+      "        [0.5081, 0.0758, 0.5568, 0.1727]])\n",
       "tensor([[False, False, False, False],\n",
       "        [False, False, False, False],\n",
       "        [False, False, False, False]])\n"
@@ -1615,7 +1615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -1669,16 +1669,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'cpu'"
+       "False"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1691,7 +1691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -1700,7 +1700,7 @@
        "'cpu'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1713,7 +1713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -1736,7 +1736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -1757,7 +1757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -1766,7 +1766,7 @@
        "(tensor([1, 2, 3]), device(type='cpu'))"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1779,7 +1779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -1788,7 +1788,7 @@
        "array([1, 2, 3])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
